--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <a class="navbar-brand" href="#"><img src="assets/images/logo.svg" alt="logo"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
         aria-controls="offcanvasNavbar">
-        <?xml version="1.0" ?><svg fill="#fff" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg">
+        <?xml version="1.0" ?><svg fill="#09245d" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg">
           <title />
           <g data-name="menu " id="menu_">
             <path d="M29,6H3A1,1,0,0,0,3,8H29a1,1,0,0,0,0-2Z" />
@@ -34,7 +34,7 @@
       </button>
       <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
         <div class="offcanvas-header">
-          <h5 class="offcanvas-title" id="offcanvasNavbarLabel"><a href="index.html"><img src="assets/images/logo.png"
+          <h5 class="offcanvas-title" id="offcanvasNavbarLabel"><a href="index.html"><img src="assets/images/logo.svg"
                 width="50" alt="logo"></a></h5>
           <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
         </div>
@@ -63,9 +63,9 @@
   <section class="banner-section sectionPadding">
     <div class="banner-inner">
       <div class="container">
-        <div class="row align-items-center g-5">
+        <div class="row align-items-center g-4 g-lg-5">
           <div class="col-md-6">
-            <div class="bannerImg">
+            <div class="bannerImg text-center">
               <img src="./assets/images/banenrImg.png" alt="" srcset="" class="img-fluid">
             </div>
           </div>
@@ -75,8 +75,7 @@
               <p>We are a professional personal trainer who works with individuals or small groups to help them achieve
                 their fitness goals.</p>
               <div class="fitness-btns d-flex align-items-center">
-                <a href="https://www.youtube.com/watch?v=MLpWrANjFbI"
-                  class="jkit-video-popup-btn glow-enable rounded-circle justify-content-center d-flex align-items-center"><span
+                <a class="jkit-video-popup-btn glow-enable rounded-circle justify-content-center d-flex align-items-center" data-bs-toggle="modal" data-bs-target="#videoModal"><span
                     class="icon-position-before">
                     <?xml version="1.0" ?>
                     <!DOCTYPE svg PUBLIC '-//W3C//DTD SVG 1.1//EN' 'http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd'>
@@ -87,7 +86,6 @@
                         d="M405.2,232.9L126.8,67.2c-3.4-2-6.9-3.2-10.9-3.2c-10.9,0-19.8,9-19.8,20H96v344h0.1c0,11,8.9,20,19.8,20  c4.1,0,7.5-1.4,11.2-3.4l278.1-165.5c6.6-5.5,10.8-13.8,10.8-23.1C416,246.7,411.8,238.5,405.2,232.9z" />
                     </svg>
                   </span></a>
-                </span></a>
                 <a href="" class="watch-training-btn btn">Watch Training</a>
               </div>
             </div>
@@ -98,18 +96,17 @@
   </section>
   <section id="about" class="lightBg sectionPadding overflow-hidden">
     <div class="container">
-      <div class="row">
+      <div class="row flex-column-reverse flex-md-row">
         <div class="col-md-6">
-          <div class=" about-content">
+          <div class=" about-content mt-5 mt-md-0">
             <h2 class="mb-3 mb-lg-4">Stay Fit And Healthy With Trainex</h2>
             <p>Lorem ipsum dolor sit amet consectetuer adipiscing elit. Aenean commodo ligula eget dolor aenean massa
-              cum
-              sociis.</p>
+              cum sociis.</p>
             <ul class="row mt-4 pt-2">
-              <li class="col-md-6 mb-4">Affordable Price</li>
-              <li class="col-md-6 mb-4">Flexible Time</li>
-              <li class="col-md-6 mb-4">Professional Team</li>
-              <li class="col-md-6 mb-4">Do it online</li>
+              <li class="col-lg-6 mb-4"><i class="fa-solid fa-circle-check"></i>Affordable Price</li>
+              <li class="col-lg-6 mb-4"><i class="fa-solid fa-circle-check"></i>Flexible Time</li>
+              <li class="col-lg-6 mb-4"><i class="fa-solid fa-circle-check"></i>Professional Team</li>
+              <li class="col-lg-6 mb-4"><i class="fa-solid fa-circle-check"></i>Do it online</li>
             </ul>
             <a href="#" class="btn primaryBtn border-0 mt-2 mt-lg-4">More About Us</a>
           </div>
@@ -125,13 +122,13 @@
     </div>
   </section>
 
-  <section class="services-section sectionPadding" id="#service">
+  <section class="services-section sectionPadding" id="service">
     <div class="container">
       <h2 class="text-center mb-4 mb-lg-5">Services</h2>
-      <div class="row align-items-center">
-        <div class="col-md-3">
-          <div class="service-item border py-4 text-center">
-            <img src="./assets/images/boddy.png" alt="" class="img-fluid">
+      <div class="row g-4">
+        <div class="col-md-6 col-lg-3">
+          <div class="service-item border text-center">
+            <img src="./assets/images/boddy.svg" alt="" class="img-fluid">
             <h4 class="text-uppercase">Strength training</h4>
             <p class="my-2">Sed do eiusm od tempor </p>
             <div class="service-dots d-flex align-items-center justify-content-center mt-4 ">
@@ -141,9 +138,9 @@
             </div>
           </div>
         </div>
-        <div class="col-md-3">
-          <div class="service-item border py-4 text-center">
-            <img src="./assets/images/boddy.png" alt="" class="img-fluid">
+        <div class="col-md-6 col-lg-3">
+          <div class="service-item border text-center">
+            <img src="./assets/images/health.svg" alt="" class="img-fluid">
             <h4 class="text-uppercase">Health monitoring</h4>
             <p class="my-2">Sed do eiusm od tempor </p>
             <div class="service-dots d-flex align-items-center justify-content-center mt-4 ">
@@ -153,9 +150,9 @@
             </div>
           </div>
         </div>
-        <div class="col-md-3">
-          <div class="service-item border py-4 text-center">
-            <img src="./assets/images/boddy.png" alt="" class="img-fluid">
+        <div class="col-md-6 col-lg-3">
+          <div class="service-item border text-center">
+            <img src="./assets/images/weight.svg" alt="" class="img-fluid">
             <h4 class="text-uppercase">Weightloss</h4>
             <p class="my-2">Sed do eiusm od tempor </p>
             <div class="service-dots d-flex align-items-center justify-content-center mt-4 ">
@@ -165,14 +162,16 @@
             </div>
           </div>
         </div>
-        <div class="service-item col-md-3 border py-4 text-center">
-          <img src="./assets/images/boddy.png" alt="" class="img-fluid">
-          <h4 class="text-uppercase">Personal coach</h4>
-          <p class="my-2">Sed do eiusm od tempor </p>
-          <div class="service-dots d-flex align-items-center justify-content-center mt-4 ">
-            <span class="rounded-circle"></span>
-            <span class="rounded-circle"></span>
-            <span class="rounded-circle"></span>
+        <div class="col-md-6 col-lg-3">
+          <div class="service-item border text-center">
+            <img src="./assets/images/personal-coach.svg" alt="" class="img-fluid">
+            <h4 class="text-uppercase">Personal coach</h4>
+            <p class="my-2">Sed do eiusm od tempor </p>
+            <div class="service-dots d-flex align-items-center justify-content-center mt-4 ">
+              <span class="rounded-circle"></span>
+              <span class="rounded-circle"></span>
+              <span class="rounded-circle"></span>
+            </div>
           </div>
         </div>
       </div>
@@ -182,8 +181,8 @@
   <section class="lightBg sectionPadding" id="our-classes">
     <div class="container">
       <h2 class="text-center mb-4 mb-lg-5">Our Classes</h2>
-      <div class="row">
-        <div class="col-md-4">
+      <div class="row g-4">
+        <div class="col-md-6 col-lg-4">
           <div class="classCard">
             <img src="./assets/images/post-18-890x664.jpg" alt="" class="img-fluid">
             <div class="content">
@@ -193,7 +192,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-6 col-lg-4">
           <div class="classCard">
             <img src="./assets/images/22.jpg" alt="" class="img-fluid">
             <div class="content">
@@ -203,7 +202,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-6 col-lg-4">
           <div class="classCard">
             <img src="./assets/images/33.jpg" alt="" class="img-fluid">
             <div class="content">
@@ -218,22 +217,23 @@
   </section>
   <section class="contact-section sectionPadding" id="contact">
     <div class="container">
-      <div class="row align-items-center g-5">
-        <div class="col-md-6">
-          <img src="./assets/images/gym-boy.jpg" alt="" class="img-fluid rounded">
+      <div class="row align-items-center g-4 g-lg-5">
+        <div class="col-md-5 text-end">
+          <img src="./assets/images/gym-boy.jpg" alt="" class="img-fluid rounded contact-img">
         </div>
-        <div class="col-md-6">
+        <div class="col-md-7">
           <div class="content-detail">
             <h2 class="mb-3 mb-lg-4">Let's get in touch</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe dolorum adipisci recusandae praesentium
               dicta! Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe dolorum adipisci recusandae
               praesentium dicta!</p>
             <ul class="mt-4">
-              <li class="d-flex mb-3"><img src="./assets/images/map.svg" alt="" class="me-3"><a href="#">92 Cherry Drive
+              <li class="d-flex align-items-center mb-3"><i class="fa-solid fa-location-dot"></i><a href="#">92 Cherry
+                  Drive
                   Uniondale, NY 11553</a></li>
-              <li class="d-flex mb-3"><img src="./assets/images/evo.png" alt="" class="me-3"><a
+              <li class="d-flex align-items-center mb-3"><i class="fa-solid fa-envelope"></i><a
                   href="mailto:lorem@ipsum.com">Lorem@ipsum.com</a></li>
-              <li class="d-flex"><img src="./assets/images/call.png" alt="" class="me-3"><a href="tel:1234567890">+91
+              <li class="d-flex align-items-center "><i class="fa-solid fa-phone"></i><a href="tel:1234567890">+91
                   123-456-789</a></li>
             </ul>
           </div>
@@ -244,26 +244,36 @@
 
   <footer class="py-5 lightBg">
     <div class="container">
-      <ul class="soc-list d-flex align-items-center justify-content-center">
-        <li><a href="#"><img src="./assets/images/facebook.svg" alt="" class="img-fluid facebook"><i
-              class="bi bi-facebook"></i></a></li>
-        <li><a href="#"><img src="./assets/images/whatsapp.svg" alt="" class="img-fluid"></a></li>
-        <li><a href="#"><img src="./assets/images/instagram.svg" alt="" class="img-fluid"></a></li>
+      <ul class="socialIcon d-flex justify-content-center gap-4">
+        <li><a href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
+        <li><a href="#"><i class="fa-brands fa-whatsapp"></i></a></li>
+        <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
       </ul>
-      <div class="copy-right text-center mt-3 border-top pt-3">All rights reserved ‐ 2024 © Chender - Fitness Trainer
+      <div class="copy-right text-center mt-4 border-top pt-4">All rights reserved ‐ 2024 © Chender - Fitness Trainer
       </div>
     </div>
   </footer>
 
+
+<!-- Modal -->
+<div class="modal fade" id="videoModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Watch Video</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <iframe width="100%" height="420" src="https://www.youtube.com/embed/GVekjGomSd0?si=exnh-8zzVKiYR9UZ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+      </div>
+    </div>
+  </div>
+</div>
+
   <script src="assets/js/bootstrap.bundle.min.js"></script>
   <script type="text/javascript">
-    function removeClass() {
-      document.getElementById('themeBody').classList.toggle('lightTheme');
-    }
-
     var className = "stickyHeader";
-    var scrollTrigger = 20;
-
+    var scrollTrigger = 50;
     window.onscroll = function () {
       // We add pageYOffset for compatibility with IE.
       if (window.scrollY >= scrollTrigger || window.pageYOffset >= scrollTrigger) {
