--- a/index.html
+++ b/index.html
@@ -103,10 +103,10 @@
             <p>Lorem ipsum dolor sit amet consectetuer adipiscing elit. Aenean commodo ligula eget dolor aenean massa
               cum sociis.</p>
             <ul class="row mt-4 pt-2">
-              <li class="col-lg-6 mb-4"><i class="fa-solid fa-circle-check"></i>Affordable Price</li>
-              <li class="col-lg-6 mb-4"><i class="fa-solid fa-circle-check"></i>Flexible Time</li>
-              <li class="col-lg-6 mb-4"><i class="fa-solid fa-circle-check"></i>Professional Team</li>
-              <li class="col-lg-6 mb-4"><i class="fa-solid fa-circle-check"></i>Do it online</li>
+              <li class="col-lg-6 mb-3 mb-xl-4"><i class="fa-solid fa-circle-check"></i>Affordable Price</li>
+              <li class="col-lg-6 mb-3 mb-xl-4"><i class="fa-solid fa-circle-check"></i>Flexible Time</li>
+              <li class="col-lg-6 mb-3 mb-xl-4"><i class="fa-solid fa-circle-check"></i>Professional Team</li>
+              <li class="col-lg-6 mb-3 mb-xl-4"><i class="fa-solid fa-circle-check"></i>Do it online</li>
             </ul>
             <a href="#" class="btn primaryBtn border-0 mt-2 mt-lg-4">More About Us</a>
           </div>
