--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
         <li><a href="#"><i class="fa-brands fa-whatsapp"></i></a></li>
         <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
       </ul>
-      <div class="copy-right text-center mt-4 border-top pt-4">All rights reserved ‐ 2024 © Chender - Fitness Trainer
+      <div class="copy-right text-center mt-3 mt-md-4 border-top pt-3 pt-md-4">All rights reserved ‐ 2024 © Chender - Fitness Trainer
       </div>
     </div>
   </footer>
