--- a/index.html
+++ b/index.html
@@ -183,34 +183,34 @@
       <h2 class="text-center mb-4 mb-lg-5">Our Classes</h2>
       <div class="row g-4">
         <div class="col-md-6 col-lg-4">
-          <div class="classCard">
+          <a href="#" class="classCard">
             <img src="./assets/images/post-18-890x664.jpg" alt="" class="img-fluid">
             <div class="content">
-              <h4 class="mb-2">Lorem Lpsum</h4>
+              <h4 class="mb-2">Yoga Classes</h4>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis deleniti corporis ipsum soluta porro.
               </p>
             </div>
-          </div>
+          </a>
         </div>
         <div class="col-md-6 col-lg-4">
-          <div class="classCard">
+          <a href="#" class="classCard">
             <img src="./assets/images/22.jpg" alt="" class="img-fluid">
             <div class="content">
-              <h4 class="mb-2">Lorem Lpsum</h4>
+              <h4 class="mb-2">Gym Classes</h4>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis deleniti corporis ipsum soluta porro.
               </p>
             </div>
-          </div>
+          </a>
         </div>
         <div class="col-md-6 col-lg-4">
-          <div class="classCard">
+          <a href="#" class="classCard">
             <img src="./assets/images/33.jpg" alt="" class="img-fluid">
             <div class="content">
-              <h4 class="mb-2">Lorem Lpsum</h4>
+              <h4 class="mb-2">Zumba Classes</h4>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis deleniti corporis ipsum soluta porro.
               </p>
             </div>
-          </div>
+          </a>
         </div>
       </div>
     </div>
@@ -260,7 +260,7 @@
   <div class="modal-dialog modal-lg">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Watch Video</h5>
+        <h5 class="modal-title" id="exampleModalLabel">Watch Training</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
