changes are update

--- a/index.html
+++ b/index.html
@@ -100,13 +100,12 @@
         <div class="col-md-6">
           <div class=" about-content mt-5 mt-md-0">
             <h2 class="mb-3 mb-lg-4">Stay Fit And Healthy With Trainex</h2>
-            <p>Lorem ipsum dolor sit amet consectetuer adipiscing elit. Aenean commodo ligula eget dolor aenean massa
-              cum sociis.</p>
+            <p>Ready to elevate your fitness journey? Our team of expert trainers is here to support you every step of the way. Whether you have questions, need advice, or want to start your personalized training program, we’d love to hear from you! Reach out today and let’s achieve your goals together!</p>
             <ul class="row mt-4 pt-2">
               <li class="col-lg-6 mb-3 mb-xl-4"><i class="fa-solid fa-circle-check"></i>Affordable Price</li>
               <li class="col-lg-6 mb-3 mb-xl-4"><i class="fa-solid fa-circle-check"></i>Flexible Time</li>
-              <li class="col-lg-6 mb-3 mb-xl-4"><i class="fa-solid fa-circle-check"></i>Professional Team</li>
               <li class="col-lg-6 mb-3 mb-xl-4"><i class="fa-solid fa-circle-check"></i>Do it online</li>
+              <li class="col-lg-6 mb-3 mb-xl-4"><i class="fa-solid fa-circle-check"></i>Do it offline</li>
             </ul>
             <a href="#" class="btn primaryBtn border-0 mt-2 mt-lg-4">More About Us</a>
           </div>
@@ -130,7 +129,7 @@
           <div class="service-item border text-center">
             <img src="./assets/images/boddy.svg" alt="" class="img-fluid">
             <h4 class="text-uppercase">Strength training</h4>
-            <p class="my-2">Sed do eiusm od tempor </p>
+            <p class="my-2">Personalized Workout Plans, Technique Coaching, Progress Tracking, Group Classes, Nutrition Guidance, Equipment Familiarization, Goal Setting, Flexibility and Mobility Training</p>
             <div class="service-dots d-flex align-items-center justify-content-center mt-4 ">
               <span class="rounded-circle"></span>
               <span class="rounded-circle"></span>
@@ -142,7 +141,7 @@
           <div class="service-item border text-center">
             <img src="./assets/images/health.svg" alt="" class="img-fluid">
             <h4 class="text-uppercase">Health monitoring</h4>
-            <p class="my-2">Sed do eiusm od tempor </p>
+            <p class="my-2">Fitness Assessments, Body Composition Analysis, Heart Rate Monitoring, Blood Pressure Checks, Nutritional Tracking, Activity Tracking, Progress Reports, Goal Reviews, Health Education</p>
             <div class="service-dots d-flex align-items-center justify-content-center mt-4 ">
               <span class="rounded-circle"></span>
               <span class="rounded-circle"></span>
@@ -153,8 +152,8 @@
         <div class="col-md-6 col-lg-3">
           <div class="service-item border text-center">
             <img src="./assets/images/weight.svg" alt="" class="img-fluid">
-            <h4 class="text-uppercase">Weightloss</h4>
-            <p class="my-2">Sed do eiusm od tempor </p>
+            <h4 class="text-uppercase">Fat loss</h4>
+            <p class="my-2">Cardiovascular Workouts, High-Intensity Interval Training (HIIT), Circuit Training, Flexibility and Mobility Work, Functional Training, Low-Impact Options, Group Fitness Classes</p>
             <div class="service-dots d-flex align-items-center justify-content-center mt-4 ">
               <span class="rounded-circle"></span>
               <span class="rounded-circle"></span>
@@ -166,7 +165,7 @@
           <div class="service-item border text-center">
             <img src="./assets/images/personal-coach.svg" alt="" class="img-fluid">
             <h4 class="text-uppercase">Personal coach</h4>
-            <p class="my-2">Sed do eiusm od tempor </p>
+            <p class="my-2">By combining expertise, support, and motivation, a personal coach helps clients achieve sustainable weight loss and improve overall fitness</p>
             <div class="service-dots d-flex align-items-center justify-content-center mt-4 ">
               <span class="rounded-circle"></span>
               <span class="rounded-circle"></span>
@@ -184,11 +183,10 @@
       <div class="row g-4">
         <div class="col-md-6 col-lg-4">
           <a href="#" class="classCard">
-            <img src="./assets/images/post-18-890x664.jpg" alt="" class="img-fluid">
+            <img src="./assets/images/yoga.jpg" alt="" class="img-fluid">
             <div class="content">
-              <h4 class="mb-2">Yoga Classes</h4>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis deleniti corporis ipsum soluta porro.
-              </p>
+              <h4 class="mb-2">Yoga</h4>
+              <p>Yoga is a holistic discipline that combines physical postures (asanas), breath control (pranayama), meditation, and ethical principles to promote overall well-being. Originating in ancient India, yoga seeks to create harmony between the mind, body, and spirit. It can be both a physical exercise to enhance strength and flexibility and a spiritual practice that cultivates inner peace and mindfulness.</p>
             </div>
           </a>
         </div>
@@ -196,19 +194,17 @@
           <a href="#" class="classCard">
             <img src="./assets/images/22.jpg" alt="" class="img-fluid">
             <div class="content">
-              <h4 class="mb-2">Gym Classes</h4>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis deleniti corporis ipsum soluta porro.
-              </p>
+              <h4 class="mb-2">Fitness</h4>
+              <p>Fitness refers to the condition of being physically healthy and strong, achieved through regular physical activity, proper nutrition, and rest. It encompasses various components that contribute to overall health and well-being, such as cardiovascular endurance, muscular strength, flexibility, and body composition.</p>
             </div>
           </a>
         </div>
         <div class="col-md-6 col-lg-4">
           <a href="#" class="classCard">
-            <img src="./assets/images/33.jpg" alt="" class="img-fluid">
+            <img src="./assets/images/CrossFit01.webp" alt="" class="img-fluid">
             <div class="content">
-              <h4 class="mb-2">Zumba Classes</h4>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis deleniti corporis ipsum soluta porro.
-              </p>
+              <h4 class="mb-2">Crossfit</h4>
+              <p>CrossFit is a high-intensity fitness program that combines elements of weightlifting, aerobic exercises, and bodyweight movements to improve overall strength, endurance, and conditioning. It was founded by Greg Glassman in 2000 and is designed to build functional fitness, meaning it trains the body to perform everyday activities more efficiently.</p>
             </div>
           </a>
         </div>
@@ -219,22 +215,17 @@
     <div class="container">
       <div class="row align-items-center g-4 g-lg-5">
         <div class="col-md-5 text-end">
-          <img src="./assets/images/gym-boy.jpg" alt="" class="img-fluid rounded contact-img">
+          <img src="./assets/images/own01.jpeg" alt="" class="img-fluid rounded contact-img">
         </div>
         <div class="col-md-7">
           <div class="content-detail">
             <h2 class="mb-3 mb-lg-4">Let's get in touch</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe dolorum adipisci recusandae praesentium
-              dicta! Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe dolorum adipisci recusandae
-              praesentium dicta!</p>
+            <p>Ready to elevate your fitness journey? Our team of expert trainers is here to support you every step of the way. Whether you have questions, need advice, or want to start your personalized training program, we’d love to hear from you! Reach out today and let’s achieve your goals together!</p>
             <ul class="mt-4">
-              <li class="d-flex align-items-center mb-3"><i class="fa-solid fa-location-dot"></i><a href="#">92 Cherry
-                  Drive
-                  Uniondale, NY 11553</a></li>
+              <li class="d-flex align-items-center mb-3"><i class="fa-solid fa-location-dot"></i><a href="#">Sector 70, Mohali (160071)</a></li>
               <li class="d-flex align-items-center mb-3"><i class="fa-solid fa-envelope"></i><a
-                  href="mailto:lorem@ipsum.com">Lorem@ipsum.com</a></li>
-              <li class="d-flex align-items-center "><i class="fa-solid fa-phone"></i><a href="tel:1234567890">+91
-                  123-456-789</a></li>
+                  href="mailto:lorem@ipsum.com">chandervedi36@gmail.com</a></li>
+              <li class="d-flex align-items-center "><i class="fa-solid fa-phone"></i><a href="tel:1234567890">+91 8054972900</a></li>
             </ul>
           </div>
         </div>
@@ -245,11 +236,11 @@
   <footer class="py-5 lightBg">
     <div class="container">
       <ul class="socialIcon d-flex justify-content-center gap-4">
-        <li><a href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
-        <li><a href="#"><i class="fa-brands fa-whatsapp"></i></a></li>
-        <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+        <li><a href="https://www.facebook.com/chandervedi.chandervedi" target="_blank"><i class="fa-brands fa-facebook-f"></i></a></li>
+        <li><a href="https://www.youtube.com/@irongodsgym6490" target="_blank"><i class="fa-brands fa-youtube"></i></a></li>
+        <li><a href="https://www.instagram.com/chandervedi.900/" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
       </ul>
-      <div class="copy-right text-center mt-3 mt-md-4 border-top pt-3 pt-md-4">All rights reserved ‐ 2024 © Chender - Fitness Trainer
+      <div class="copy-right text-center mt-3 mt-md-4 border-top pt-3 pt-md-4">All rights reserved ‐ 2024 © Chander Vedi - Fitness Trainer
       </div>
     </div>
   </footer>
@@ -264,7 +255,7 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        <iframe width="100%" height="420" src="https://www.youtube.com/embed/GVekjGomSd0?si=exnh-8zzVKiYR9UZ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <iframe width="100%" height="420" src="https://www.youtube.com/embed/vwI8sbtHvrc?si=MwLAgs7aAHEXguD1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
       </div>
     </div>
   </div>
