--- a/index.html
+++ b/index.html
@@ -182,31 +182,31 @@
       <h2 class="text-center mb-4 mb-lg-5">Our Classes</h2>
       <div class="row g-4">
         <div class="col-md-6 col-lg-4">
-          <a href="#" class="classCard">
+          <div class="classCard">
             <img src="./assets/images/yoga.jpg" alt="" class="img-fluid">
             <div class="content">
               <h4 class="mb-2">Yoga</h4>
               <p>Yoga is a holistic discipline that combines physical postures (asanas), breath control (pranayama), meditation, and ethical principles to promote overall well-being. Originating in ancient India, yoga seeks to create harmony between the mind, body, and spirit. It can be both a physical exercise to enhance strength and flexibility and a spiritual practice that cultivates inner peace and mindfulness.</p>
             </div>
-          </a>
+          </div>
         </div>
         <div class="col-md-6 col-lg-4">
-          <a href="#" class="classCard">
+          <div class="classCard">
             <img src="./assets/images/22.jpg" alt="" class="img-fluid">
             <div class="content">
               <h4 class="mb-2">Fitness</h4>
               <p>Fitness refers to the condition of being physically healthy and strong, achieved through regular physical activity, proper nutrition, and rest. It encompasses various components that contribute to overall health and well-being, such as cardiovascular endurance, muscular strength, flexibility, and body composition.</p>
             </div>
-          </a>
+          </div>
         </div>
         <div class="col-md-6 col-lg-4">
-          <a href="#" class="classCard">
+          <div" class="classCard">
             <img src="./assets/images/CrossFit01.webp" alt="" class="img-fluid">
             <div class="content">
               <h4 class="mb-2">Crossfit</h4>
               <p>CrossFit is a high-intensity fitness program that combines elements of weightlifting, aerobic exercises, and bodyweight movements to improve overall strength, endurance, and conditioning. It was founded by Greg Glassman in 2000 and is designed to build functional fitness, meaning it trains the body to perform everyday activities more efficiently.</p>
             </div>
-          </a>
+          </div>
         </div>
       </div>
     </div>
